--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: My Website
+title: Project Portfolio
 
 # Your name to show in the footer
-author: Some Person
+author: Joe Hewitt
 
 ###############################################
 # --- List of links in the navigation bar --- #
