--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Project Portfolio
+title: Joe's Site
 
 # Your name to show in the footer
 author: Joe Hewitt
