--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ title: Joe's Site
 # Your name to show in the footer
 author: Joe Hewitt
 
+baseurl : jhewitt11.github.io
+
 ###############################################
 # --- List of links in the navigation bar --- #
 ###############################################
