--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ author: Joe Hewitt
 ###############################################
 
 navbar-links:
+  Contact : "contact"
   #About Me: "aboutme"
   #Resume : "portfolio"
 
